--- a/src/modules/_border-style.scss
+++ b/src/modules/_border-style.scss
@@ -1,12 +1,12 @@
-@use '../../functions';
-@use '../../variables';
+@use '../functions';
+@use '../variables';
 
-@mixin border-style() {
+@mixin border-style($media: null) {
   $global-prefix: variables.$global-prefix;
   $prefix: variables.$border-style-prefix;
 
   @each $border-style in variables.$border-styles {
-    #{functions.construct-class-name($global-prefix, $prefix + $border-style)} {
+    #{functions.construct-class-name($global-prefix, $prefix + $border-style, $media)} {
       border-style: $border-style;
     }
   }
