--- a/src/_load-modules.scss
+++ b/src/_load-modules.scss
@@ -1,45 +1,46 @@
 @use 'sass:map';
 @use 'variables';
+@use 'mixins';
 @use 'modules/background-color';
 @use 'modules/border-color';
+@use 'modules/border-radius';
 @use 'modules/border';
 @use 'modules/border-style';
 @use 'modules/border-width';
 @use 'modules/box-sizing';
 @use 'modules/color';
 @use 'modules/complex';
+@use 'modules/coordinates';
 @use 'modules/cursor';
 @use 'modules/debug';
+@use 'modules/display';
+@use 'modules/flex-direction';
+@use 'modules/flex';
+@use 'modules/float';
 @use 'modules/font-family';
+@use 'modules/font-size';
 @use 'modules/font-style';
+@use 'modules/font-weight';
+@use 'modules/height';
 @use 'modules/hover-background-color';
 @use 'modules/hover-color';
+@use 'modules/line-height';
+@use 'modules/margin';
+@use 'modules/measure';
 @use 'modules/miscellaneous';
 @use 'modules/opacity';
+@use 'modules/padding';
+@use 'modules/position';
 @use 'modules/reset';
 @use 'modules/text-align';
 @use 'modules/text-decoration';
 @use 'modules/text-shadow';
 @use 'modules/text-transform';
+@use 'modules/tracking';
 @use 'modules/transform';
 @use 'modules/transition';
-@use 'modules/visibility';
-@use 'modules/border-radius';
-@use 'modules/coordinates';
-@use 'modules/display';
-@use 'modules/flex-direction';
-@use 'modules/flex';
-@use 'modules/float';
-@use 'modules/font-size';
-@use 'modules/font-weight';
-@use 'modules/height';
-@use 'modules/line-height';
-@use 'modules/margin';
-@use 'modules/measure';
-@use 'modules/padding';
-@use 'modules/position';
-@use 'modules/tracking';
 @use 'modules/vertical-align';
+@use 'modules/visibility';
 @use 'modules/white-space';
 @use 'modules/width';
 
@@ -58,7 +59,9 @@
 
       @if $responsive {
         @each $breakpoint, $map in $breakpoints {
-          @include background-color.background-color($breakpoint);
+          @include mixins.media-breakpoint-up($breakpoint) {
+            @include background-color.background-color($breakpoint);
+          }
         }
       }
     }
@@ -68,7 +71,21 @@
 
       @if $responsive {
         @each $breakpoint, $map in $breakpoints {
-          @include border-color.border-color($breakpoint);
+          @include mixins.media-breakpoint-up($breakpoint) {
+            @include border-color.border-color($breakpoint);
+          }
+        }
+      }
+    }
+
+    @if $module == border-radius {
+      @include border-radius.border-radius();
+
+      @if $responsive {
+        @each $breakpoint, $map in $breakpoints {
+          @include mixins.media-breakpoint-up($breakpoint) {
+            @include border-radius.border-radius($breakpoint);
+          }
         }
       }
     }
@@ -78,7 +95,9 @@
 
       @if $responsive {
         @each $breakpoint, $map in $breakpoints {
-          @include border.border($breakpoint);
+          @include mixins.media-breakpoint-up($breakpoint) {
+            @include border.border($breakpoint);
+          }
         }
       }
     }
@@ -88,7 +107,9 @@
 
       @if $responsive {
         @each $breakpoint, $map in $breakpoints {
-          @include border-style.border-style($breakpoint);
+          @include mixins.media-breakpoint-up($breakpoint) {
+            @include border-style.border-style($breakpoint);
+          }
         }
       }
     }
@@ -98,7 +119,9 @@
 
       @if $responsive {
         @each $breakpoint, $map in $breakpoints {
-          @include border-width.border-width($breakpoint);
+          @include mixins.media-breakpoint-up($breakpoint) {
+            @include border-width.border-width($breakpoint);
+          }
         }
       }
     }
@@ -108,7 +131,9 @@
 
       @if $responsive {
         @each $breakpoint, $map in $breakpoints {
-          @include box-sizing.box-sizing($breakpoint);
+          @include mixins.media-breakpoint-up($breakpoint) {
+            @include box-sizing.box-sizing($breakpoint);
+          }
         }
       }
     }
@@ -118,7 +143,9 @@
 
       @if $responsive {
         @each $breakpoint, $map in $breakpoints {
-          @include color.color($breakpoint);
+          @include mixins.media-breakpoint-up($breakpoint) {
+            @include color.color($breakpoint);
+          }
         }
       }
     }
@@ -128,7 +155,21 @@
 
       @if $responsive {
         @each $breakpoint, $map in $breakpoints {
-          @include complex.complex($breakpoint);
+          @include mixins.media-breakpoint-up($breakpoint) {
+            @include complex.complex($breakpoint);
+          }
+        }
+      }
+    }
+
+    @if $module == coordinates {
+      @include coordinates.coordinates();
+
+      @if $responsive {
+        @each $breakpoint, $map in $breakpoints {
+          @include mixins.media-breakpoint-up($breakpoint) {
+            @include coordinates.coordinates($breakpoint);
+          }
         }
       }
     }
@@ -138,7 +179,9 @@
 
       @if $responsive {
         @each $breakpoint, $map in $breakpoints {
-          @include cursor.cursor($breakpoint);
+          @include mixins.media-breakpoint-up($breakpoint) {
+            @include cursor.cursor($breakpoint);
+          }
         }
       }
     }
@@ -148,7 +191,57 @@
 
       @if $responsive {
         @each $breakpoint, $map in $breakpoints {
-          @include debug.debug($breakpoint);
+          @include mixins.media-breakpoint-up($breakpoint) {
+            @include debug.debug($breakpoint);
+          }
+        }
+      }
+    }
+
+    @if $module == display {
+      @include display.display();
+
+      @if $responsive {
+        @each $breakpoint, $map in $breakpoints {
+          @include mixins.media-breakpoint-up($breakpoint) {
+            @include display.display($breakpoint);
+          }
+        }
+      }
+    }
+
+    @if $module == flex-direction {
+      @include flex-direction.flex-direction();
+
+      @if $responsive {
+        @each $breakpoint, $map in $breakpoints {
+          @include mixins.media-breakpoint-up($breakpoint) {
+            @include flex-direction.flex-direction($breakpoint);
+          }
+        }
+      }
+    }
+
+    @if $module == flex {
+      @include flex.flex();
+
+      @if $responsive {
+        @each $breakpoint, $map in $breakpoints {
+          @include mixins.media-breakpoint-up($breakpoint) {
+            @include flex.flex($breakpoint);
+          }
+        }
+      }
+    }
+
+    @if $module == float {
+      @include float.float();
+
+      @if $responsive {
+        @each $breakpoint, $map in $breakpoints {
+          @include mixins.media-breakpoint-up($breakpoint) {
+            @include float.float($breakpoint);
+          }
         }
       }
     }
@@ -158,7 +251,21 @@
 
       @if $responsive {
         @each $breakpoint, $map in $breakpoints {
-          @include font-family.font-family($breakpoint);
+          @include mixins.media-breakpoint-up($breakpoint) {
+            @include font-family.font-family($breakpoint);
+          }
+        }
+      }
+    }
+
+    @if $module == font-size {
+      @include font-size.font-size();
+
+      @if $responsive {
+        @each $breakpoint, $map in $breakpoints {
+          @include mixins.media-breakpoint-up($breakpoint) {
+            @include font-size.font-size($breakpoint);
+          }
         }
       }
     }
@@ -168,7 +275,33 @@
 
       @if $responsive {
         @each $breakpoint, $map in $breakpoints {
-          @include font-style.font-style($breakpoint);
+          @include mixins.media-breakpoint-up($breakpoint) {
+            @include font-style.font-style($breakpoint);
+          }
+        }
+      }
+    }
+
+    @if $module == font-weight {
+      @include font-weight.font-weight();
+
+      @if $responsive {
+        @each $breakpoint, $map in $breakpoints {
+          @include mixins.media-breakpoint-up($breakpoint) {
+            @include font-weight.font-weight($breakpoint);
+          }
+        }
+      }
+    }
+
+    @if $module == height {
+      @include height.height();
+
+      @if $responsive {
+        @each $breakpoint, $map in $breakpoints {
+          @include mixins.media-breakpoint-up($breakpoint) {
+            @include height.height($breakpoint);
+          }
         }
       }
     }
@@ -178,7 +311,9 @@
 
       @if $responsive {
         @each $breakpoint, $map in $breakpoints {
-          @include hover-background-color.hover-background-color($breakpoint);
+          @include mixins.media-breakpoint-up($breakpoint) {
+            @include hover-background-color.hover-background-color($breakpoint);
+          }
         }
       }
     }
@@ -188,7 +323,45 @@
 
       @if $responsive {
         @each $breakpoint, $map in $breakpoints {
-          @include hover-color.hover-color($breakpoint);
+          @include mixins.media-breakpoint-up($breakpoint) {
+            @include hover-color.hover-color($breakpoint);
+          }
+        }
+      }
+    }
+
+    @if $module == line-height {
+      @include line-height.line-height();
+
+      @if $responsive {
+        @each $breakpoint, $map in $breakpoints {
+          @include mixins.media-breakpoint-up($breakpoint) {
+            @include line-height.line-height($breakpoint);
+          }
+        }
+      }
+    }
+
+    @if $module == margin {
+      @include margin.margin();
+
+      @if $responsive {
+        @each $breakpoint, $map in $breakpoints {
+          @include mixins.media-breakpoint-up($breakpoint) {
+            @include margin.margin($breakpoint);
+          }
+        }
+      }
+    }
+
+    @if $module == measure {
+      @include measure.measure();
+
+      @if $responsive {
+        @each $breakpoint, $map in $breakpoints {
+          @include mixins.media-breakpoint-up($breakpoint) {
+            @include measure.measure($breakpoint);
+          }
         }
       }
     }
@@ -198,7 +371,9 @@
 
       @if $responsive {
         @each $breakpoint, $map in $breakpoints {
-          @include miscellaneous.miscellaneous($breakpoint);
+          @include mixins.media-breakpoint-up($breakpoint) {
+            @include miscellaneous.miscellaneous($breakpoint);
+          }
         }
       }
     }
@@ -208,7 +383,33 @@
 
       @if $responsive {
         @each $breakpoint, $map in $breakpoints {
-          @include opacity.opacity($breakpoint);
+          @include mixins.media-breakpoint-up($breakpoint) {
+            @include opacity.opacity($breakpoint);
+          }
+        }
+      }
+    }
+
+    @if $module == padding {
+      @include padding.padding();
+
+      @if $responsive {
+        @each $breakpoint, $map in $breakpoints {
+          @include mixins.media-breakpoint-up($breakpoint) {
+            @include padding.padding($breakpoint);
+          }
+        }
+      }
+    }
+
+    @if $module == position {
+      @include position.position();
+
+      @if $responsive {
+        @each $breakpoint, $map in $breakpoints {
+          @include mixins.media-breakpoint-up($breakpoint) {
+            @include position.position($breakpoint);
+          }
         }
       }
     }
@@ -218,7 +419,9 @@
 
       @if $responsive {
         @each $breakpoint, $map in $breakpoints {
-          @include reset.reset($breakpoint);
+          @include mixins.media-breakpoint-up($breakpoint) {
+            @include reset.reset($breakpoint);
+          }
         }
       }
     }
@@ -228,7 +431,9 @@
 
       @if $responsive {
         @each $breakpoint, $map in $breakpoints {
-          @include text-align.text-align($breakpoint);
+          @include mixins.media-breakpoint-up($breakpoint) {
+            @include text-align.text-align($breakpoint);
+          }
         }
       }
     }
@@ -238,7 +443,9 @@
 
       @if $responsive {
         @each $breakpoint, $map in $breakpoints {
-          @include text-decoration.text-decoration($breakpoint);
+          @include mixins.media-breakpoint-up($breakpoint) {
+            @include text-decoration.text-decoration($breakpoint);
+          }
         }
       }
     }
@@ -248,7 +455,9 @@
 
       @if $responsive {
         @each $breakpoint, $map in $breakpoints {
-          @include text-shadow.text-shadow($breakpoint);
+          @include mixins.media-breakpoint-up($breakpoint) {
+            @include text-shadow.text-shadow($breakpoint);
+          }
         }
       }
     }
@@ -258,7 +467,21 @@
 
       @if $responsive {
         @each $breakpoint, $map in $breakpoints {
-          @include text-transform.text-transform($breakpoint);
+          @include mixins.media-breakpoint-up($breakpoint) {
+            @include text-transform.text-transform($breakpoint);
+          }
+        }
+      }
+    }
+
+    @if $module == tracking {
+      @include tracking.tracking();
+
+      @if $responsive {
+        @each $breakpoint, $map in $breakpoints {
+          @include mixins.media-breakpoint-up($breakpoint) {
+            @include tracking.tracking($breakpoint);
+          }
         }
       }
     }
@@ -268,7 +491,9 @@
 
       @if $responsive {
         @each $breakpoint, $map in $breakpoints {
-          @include transform.transform($breakpoint);
+          @include mixins.media-breakpoint-up($breakpoint) {
+            @include transform.transform($breakpoint);
+          }
         }
       }
     }
@@ -278,7 +503,21 @@
 
       @if $responsive {
         @each $breakpoint, $map in $breakpoints {
-          @include transition.transition($breakpoint);
+          @include mixins.media-breakpoint-up($breakpoint) {
+            @include transition.transition($breakpoint);
+          }
+        }
+      }
+    }
+
+    @if $module == vertical-align {
+      @include vertical-align.vertical-align();
+
+      @if $responsive {
+        @each $breakpoint, $map in $breakpoints {
+          @include mixins.media-breakpoint-up($breakpoint) {
+            @include vertical-align.vertical-align($breakpoint);
+          }
         }
       }
     }
@@ -288,187 +527,33 @@
 
       @if $responsive {
         @each $breakpoint, $map in $breakpoints {
-          @include visibility.visibility($breakpoint);
-        }
-      }
-    }
-
-    @if $module == border-radius {
-      @include border-radius.border-radius('');
-
-      @if $responsive {
-        @each $breakpoint, $map in $breakpoints {
-          @include border-radius.border-radius($breakpoint);
-        }
-      }
-    }
-
-    @if $module == coordinates {
-      @include coordinates.coordinates('');
-
-      @if $responsive {
-        @each $breakpoint, $map in $breakpoints {
-          @include coordinates.coordinates($breakpoint);
-        }
-      }
-    }
-
-    @if $module == display {
-      @include display.display('');
-
-      @if $responsive {
-        @each $breakpoint, $map in $breakpoints {
-          @include display.display($breakpoint);
-        }
-      }
-    }
-
-    @if $module == flex-direction {
-      @include flex-direction.flex-direction('');
-
-      @if $responsive {
-        @each $breakpoint, $map in $breakpoints {
-          @include flex-direction.flex-direction($breakpoint);
-        }
-      }
-    }
-
-    @if $module == flex {
-      @include flex.flex('');
-
-      @if $responsive {
-        @each $breakpoint, $map in $breakpoints {
-          @include flex.flex($breakpoint);
-        }
-      }
-    }
-
-    @if $module == float {
-      @include float.float('');
-
-      @if $responsive {
-        @each $breakpoint, $map in $breakpoints {
-          @include float.float($breakpoint);
-        }
-      }
-    }
-
-    @if $module == font-size {
-      @include font-size.font-size('');
-
-      @if $responsive {
-        @each $breakpoint, $map in $breakpoints {
-          @include font-size.font-size($breakpoint);
-        }
-      }
-    }
-
-    @if $module == font-weight {
-      @include font-weight.font-weight('');
-
-      @if $responsive {
-        @each $breakpoint, $map in $breakpoints {
-          @include font-weight.font-weight($breakpoint);
-        }
-      }
-    }
-
-    @if $module == height {
-      @include height.height('');
-
-      @if $responsive {
-        @each $breakpoint, $map in $breakpoints {
-          @include height.height($breakpoint);
-        }
-      }
-    }
-
-    @if $module == line-height {
-      @include line-height.line-height('');
-
-      @if $responsive {
-        @each $breakpoint, $map in $breakpoints {
-          @include line-height.line-height($breakpoint);
-        }
-      }
-    }
-
-    @if $module == margin {
-      @include margin.margin('');
-
-      @if $responsive {
-        @each $breakpoint, $map in $breakpoints {
-          @include margin.margin($breakpoint);
-        }
-      }
-    }
-
-    @if $module == measure {
-      @include measure.measure('');
-
-      @if $responsive {
-        @each $breakpoint, $map in $breakpoints {
-          @include measure.measure($breakpoint);
-        }
-      }
-    }
-
-    @if $module == padding {
-      @include padding.padding('');
-
-      @if $responsive {
-        @each $breakpoint, $map in $breakpoints {
-          @include padding.padding($breakpoint);
-        }
-      }
-    }
-
-    @if $module == position {
-      @include position.position('');
-
-      @if $responsive {
-        @each $breakpoint, $map in $breakpoints {
-          @include position.position($breakpoint);
-        }
-      }
-    }
-
-    @if $module == tracking {
-      @include tracking.tracking('');
-
-      @if $responsive {
-        @each $breakpoint, $map in $breakpoints {
-          @include tracking.tracking($breakpoint);
-        }
-      }
-    }
-
-    @if $module == vertical-align {
-      @include vertical-align.vertical-align('');
-
-      @if $responsive {
-        @each $breakpoint, $map in $breakpoints {
-          @include vertical-align.vertical-align($breakpoint);
+          @include mixins.media-breakpoint-up($breakpoint) {
+            @include visibility.visibility($breakpoint);
+          }
         }
       }
     }
 
     @if $module == white-space {
-      @include white-space.white-space('');
+      @include white-space.white-space();
 
       @if $responsive {
         @each $breakpoint, $map in $breakpoints {
-          @include white-space.white-space($breakpoint);
+          @include mixins.media-breakpoint-up($breakpoint) {
+            @include white-space.white-space($breakpoint);
+          }
         }
       }
     }
 
     @if $module == width {
-      @include width.width('');
+      @include width.width();
 
       @if $responsive {
         @each $breakpoint, $map in $breakpoints {
-          @include width.width($breakpoint);
+          @include mixins.media-breakpoint-up($breakpoint) {
+            @include width.width($breakpoint);
+          }
         }
       }
     }
