--- a/src/modules/_cursor.scss
+++ b/src/modules/_cursor.scss
@@ -1,12 +1,12 @@
-@use '../../functions';
-@use '../../variables';
+@use '../functions';
+@use '../variables';
 
-@mixin cursor() {
+@mixin cursor($media: null) {
   $global-prefix: variables.$global-prefix;
   $name: variables.$cursor-name;
 
   @each $cursor in variables.$cursors {
-    #{functions.construct-class-name($global-prefix, $name, $cursor)} {
+    #{functions.construct-class-name($global-prefix, $name, $cursor, $media)} {
       cursor: $cursor;
     }
   }
