--- a/src/modules/_float.scss
+++ b/src/modules/_float.scss
@@ -1,12 +1,12 @@
-@use '../../functions';
-@use '../../variables';
+@use '../functions';
+@use '../variables';
 
-@mixin float($media-suffix) {
+@mixin float($media: null) {
   $global-prefix: variables.$global-prefix;
   $prefix: variables.$float-prefix;
 
   @each $name, $value in variables.$floats {
-    #{functions.construct-class-name($global-prefix, $prefix + $name, $media-suffix)} {
+    #{functions.construct-class-name($global-prefix, $prefix + $name, $media)} {
       float: $value;
     }
   }
