--- a/src/modules/_font-style.scss
+++ b/src/modules/_font-style.scss
@@ -1,11 +1,11 @@
-@use '../../functions';
-@use '../../variables';
+@use '../functions';
+@use '../variables';
 
-@mixin font-style() {
+@mixin font-style($media: null) {
   $global-prefix: variables.$global-prefix;
 
   @each $name, $value in variables.$font-styles {
-    #{functions.construct-class-name($global-prefix, $name)} {
+    #{functions.construct-class-name($global-prefix, $name, $media)} {
       font-style: $value;
     }
   }
