--- a/src/modules/_miscellaneous.scss
+++ b/src/modules/_miscellaneous.scss
@@ -1,17 +1,17 @@
-@use '../../functions';
-@use '../../variables';
+@use '../functions';
+@use '../variables';
 
-@mixin miscellaneous() {
+@mixin miscellaneous($media: null) {
   $global-prefix: variables.$global-prefix;
 
-  #{functions.construct-class-name($global-prefix, list-reset)} {
+  #{functions.construct-class-name($global-prefix, list-reset, $media)} {
     list-style: none;
     padding-left: 0;
     margin-top: 0;
     margin-bottom: 0;
   }
 
-  #{functions.construct-class-name($global-prefix, stretch)} {
+  #{functions.construct-class-name($global-prefix, stretch, $media)} {
     position: absolute;
     top: 0;
     left: 0;
@@ -19,7 +19,7 @@
     right: 0;
   }
 
-  #{functions.construct-class-name($global-prefix, stretch-pseudo)}::after {
+  #{functions.construct-class-name($global-prefix, stretch-pseudo, $media)}::after {
     content: '';
     position: absolute;
     top: 0;
@@ -30,7 +30,7 @@
     background-color: transparent;
   }
 
-  #{functions.construct-class-name($global-prefix, link)} {
+  #{functions.construct-class-name($global-prefix, link, $media)} {
     text-decoration: none;
   }
 }
