--- a/src/modules/_position.scss
+++ b/src/modules/_position.scss
@@ -1,11 +1,11 @@
-@use '../../functions';
-@use '../../variables';
+@use '../functions';
+@use '../variables';
 
-@mixin position($media-suffix) {
+@mixin position($media: null) {
   $global-prefix: variables.$global-prefix;
 
   @each $name, $value in variables.$positions {
-    #{functions.construct-class-name($global-prefix, $name, $media-suffix)} {
+    #{functions.construct-class-name($global-prefix, $name, $media)} {
       position: $value;
     }
   }
