--- a/src/modules/_text-transform.scss
+++ b/src/modules/_text-transform.scss
@@ -1,11 +1,11 @@
-@use '../../functions';
-@use '../../variables';
+@use '../functions';
+@use '../variables';
 
-@mixin text-transform() {
+@mixin text-transform($media: null) {
   $global-prefix: variables.$global-prefix;
 
   @each $name, $value in variables.$text-transforms {
-    #{functions.construct-class-name($global-prefix, $name)} {
+    #{functions.construct-class-name($global-prefix, $name, $media)} {
       text-transform: $value;
     }
   }
