--- a/src/modules/_transform.scss
+++ b/src/modules/_transform.scss
@@ -1,19 +1,19 @@
-@use '../../functions';
-@use '../../variables';
+@use '../functions';
+@use '../variables';
 
-@mixin transform() {
+@mixin transform($media: null) {
   $global-prefix: variables.$global-prefix;
   $name-horizontal: variables.$transform-translate-horizontal-name;
   $name-vertical: variables.$transform-translate-vertical-name;
 
   @each $level, $value in variables.$transform-translate-horizontal-levels {
-    #{functions.construct-class-name($global-prefix, $name-horizontal, $level)} {
+    #{functions.construct-class-name($global-prefix, $name-horizontal, $level, $media)} {
       transform: translateX($value);
     }
   }
 
   @each $level, $value in variables.$transform-translate-vertical-levels {
-    #{functions.construct-class-name($global-prefix, $name-vertical, $level)} {
+    #{functions.construct-class-name($global-prefix, $name-vertical, $level, $media)} {
       transform: translateY($value);
     }
   }
