--- a/src/modules/_white-space.scss
+++ b/src/modules/_white-space.scss
@@ -1,11 +1,11 @@
-@use '../../functions';
-@use '../../variables';
+@use '../functions';
+@use '../variables';
 
-@mixin white-space($media-suffix) {
+@mixin white-space($media: null) {
   $global-prefix: variables.$global-prefix;
 
   @each $name, $value in variables.$white-spaces {
-    #{functions.construct-class-name($global-prefix, $name, $media-suffix)} {
+    #{functions.construct-class-name($global-prefix, $name, $media)} {
       white-space: $value;
     }
   }
