Update compilation pipeline
Merge @media queries in css
Pretty print css
Add linting for compiled css
Integrate gzipping into gulpfile

--- a/src/_mixins.scss
+++ b/src/_mixins.scss
@@ -3,7 +3,7 @@
 @use 'sass:string';
 
 @mixin media-breakpoint-up($name) {
-  $breakpoint-map: map.get(variables.$breakpoints, $name);
+  $breakpoint-map: map.get(variables.$breakpoints-all, $name);
 
   @if $name == '' or $name == null {
     @content;
